--- a/IdentityServer.Core/appsettings.json
+++ b/IdentityServer.Core/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.,1433;Initial Catalog=IdentityServer.Data;User ID=SA;Password=yourStrongPassword12#$ ;"
+    "DefaultConnection": "Server=.,1433;Initial Catalog=IdentityServer.Data;User ID=SA;Password=yourStrongPassword12#$;",
+    "DefaultInMemory": "IdentityServerDB"
   },
   "Logging": {
     "LogLevel": {
