--- a/IdentityServer.Core/appsettings.json
+++ b/IdentityServer.Core/appsettings.json
@@ -1,13 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.,1433;Initial Catalog=IdentityServer.Data;User ID=SA;Password=yourStrongPassword12#$;",
+    "DefaultConnection": "Server=[::1];Initial Catalog=IdentityServer.Data;User ID=SA;Password=yourStrongPassword12#$;",
     "DefaultInMemory": "IdentityServerDB"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
